# lab5

./: .gitmodules  CMakeLists.txt  Circle.cpp  Circle.h  Point2D.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h  task1.cpp  task2.cpp
